# digital_bot_tg

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Caddyfile  DEPLOY_REPORT.md  Dockerfile  README.md  RELEASE_PROCESS.md  SECURITY_REPORT.md  SELF_REVIEW.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  healthcheck.py  main.py
app/bot/: callbacks.py  keyboards.py  messages.py  middlewares.py  router.py  utils.py
app/bot/handlers/: admin.py  catalog.py  payments.py  purchases.py  start.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  rate_limit.py  security.py
app/db/: models.py  session.py
app/migrations/: env.py
app/migrations/versions/: 0001_initial.py  0002_quantity_menu_settings.py
app/payment_providers/: base.py  platega.py  platega_webhook.py  telegram.py
app/services/: admin.py  audit.py  broadcasts.py  catalog.py  digital_items.py  orders.py  settings.py  users.py
app/tests/: test_payment_postgres.py  test_security_static.py
