[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-goods-telegram-bot"
version = "0.1.0"
description = "Production-ready Telegram bot for selling unique digital goods."
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7,<4.0",
    "aiohttp>=3.9,<4.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "redis>=5.0,<6.0",
    "SQLAlchemy[asyncio]>=2.0,<3.0",
    "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20,<1.0",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.5,<1.0",
    "eval-type-backport>=0.2,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
markers = [
    "postgres: tests that require PostgreSQL and TEST_DATABASE_URL",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = [
    "S101",
    "E501",
    "UP017",
    "UP035",
    "UP006",
    "UP037",
    "UP042",
    "UP045",
    "S104",
    "S106",
]
